RESOLVED FIXED 54909
canAccommodateEllipsis() confuses clang's -Woverloaded-virtual
https://bugs.webkit.org/show_bug.cgi?id=54909
Summary canAccommodateEllipsis() confuses clang's -Woverloaded-virtual
Nico Weber
Reported 2011-02-21 14:39:24 PST
In file included from /b/build/slave/mac_clang/build/src/third_party/WebKit/Source/WebCore/WebCore.gyp/../dom/Node.cpp:72: In file included from ../rendering/RenderBlock.h:30: ../rendering/RootInlineBox.h:80:10: error: 'WebCore::RootInlineBox::canAccommodateEllipsis' hides overloaded virtual function [-Woverloaded-virtual] bool canAccommodateEllipsis(bool ltr, int blockEdge, int lineBoxEdge, int ellipsisWidth); ^ In file included from /b/build/slave/mac_clang/build/src/third_party/WebKit/Source/WebCore/WebCore.gyp/../dom/Node.cpp:72: In file included from ../rendering/RenderBlock.h:30: In file included from ../rendering/RootInlineBox.h:25: ../rendering/InlineFlowBox.h:178:18: note: hidden overloaded virtual function 'WebCore::InlineFlowBox::canAccommodateEllipsis' declared here virtual bool canAccommodateEllipsis(bool ltr, int blockEdge, int ellipsisWidth); This was added in http://trac.webkit.org/changeset/6858 and not touched since. It looks like these functions are not meant to be overrides. One of the two should be renamed.
Attachments
Patch (4.36 KB, patch)
2011-02-21 14:57 PST, Nico Weber
no flags
Patch (4.36 KB, patch)
2011-02-21 17:06 PST, Nico Weber
no flags
Nico Weber
Comment 1 2011-02-21 14:57:31 PST
Nico Weber
Comment 2 2011-02-21 17:06:17 PST
WebKit Commit Bot
Comment 3 2011-02-21 21:50:21 PST
The commit-queue encountered the following flaky tests while processing attachment 83242 [details]: animations/suspend-resume-animation.html bug 48161 (author: cmarrin@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2011-02-21 21:52:06 PST
Comment on attachment 83242 [details] Patch Clearing flags on attachment: 83242 Committed r79286: <http://trac.webkit.org/changeset/79286>
WebKit Commit Bot
Comment 5 2011-02-21 21:52:11 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6 2011-02-21 22:37:23 PST
http://trac.webkit.org/changeset/79286 might have broken GTK Linux 32-bit Release
Note You need to log in before you can comment on or make changes to this bug.