2011-02-21  Nico Weber  <thakis@chromium.org>

Reviewed by Adam Barth.

        canAccommodateEllipsis() confuses clang's -Woverloaded-virtual
        https://bugs.webkit.org/show_bug.cgi?id=54909

        Rename the overload in RootInlineBox to lineCanAccomodateEllipsis() to
        unconfuse clang. No intended functionality change.

        * rendering/RenderBlockLineLayout.cpp:
        (WebCore::RenderBlock::checkLinesForTextOverflow):
        * rendering/RenderFlexibleBox.cpp:
        (WebCore::RenderFlexibleBox::applyLineClamp):
        * rendering/RootInlineBox.cpp:
        (WebCore::RootInlineBox::lineCanAccommodateEllipsis):
        * rendering/RootInlineBox.h:

Canonical link: https://commits.webkit.org/69209@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79286 268f45cc-cd09-0410-ab3c-d52691b4dbfc